    - Fix a raid frame target border issue
    - Fix the dodge/dash bar "antennas" (CF#241)
    - Added logic to hopefully fix the loading screen crashing bug (CF#254)

MISCELLANEOUS
    - Major refactor of the class power system mainly for performance reasons
    - Performance fixes in all unit frame event handling


5.0.9

NEW
    - Add background imagery to reputation entries (for the beginning: BfA and Legion; credit v_riz_table_Kao)
    - Mythic keystone level now visible in the objectives tracker (CF#234)
    - Add link to Outfitter in hero panel that temporarily uses default character frame (CF#219)
    - Add link to Clique options that lets Clique use default spell panel for spell binding
    - Raid frames now have incoming heal prediction
    - Add Leader, Assist, Mainassist and Maintank icon to raid frames

FIXED
    - Group frames can now be moved properly to the right of the screen (CF#194)
    - Font sizing issues in chat have been fixed (CF#231, CF#232)
    - Fix a scrolling issue and click-to-expand when searching issue in reputation list
    - Hide health globe in pet battles when using custom action bars (CF#235)
    - High level M+ keys now properly show 4th affix
    - Fix some Minmap Button collecting issues (CF#212; credit Munsio)
    - Display passive talents in spellbook

MISCELLANEOUS
    - The minimap clock options have been updated to include time manager (credit Munsio)
    - Add "Deposit all"-Button to bank view (credit Munsio)


5.0.8

NEW
    - Add option to toggle world markers
    - Add Pawn support to Hero window
    - Make the Azerite bar more awesome
    - Add dynamic cam option toggle
    - Add coordinates to minimap

FIXED
    - Restored PvP Arathi HUD
    - Raid frames should display names properly
    - Fix a layout issue with quest items
    - Level rewards window should now display passive skills with correct mask
    - Fade all chat buttons
    - All chat tabs now should have the correct font